extract to compress.js

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
     <title>Discord Bot CDN</title>
   </head>
   <body>
+    <h1>Upload files to Discord CDN!</h1>
+    <p>Make sure you followed the <a href="" target="_blank"></a></p>
     <form action="/upload" method="post" enctype="multipart/form-data">
       <input type="file" name="file" id="file" />
       <input type="text" name="password" placeholder="password" id="password" />
