--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <h1>Upload files to Discord CDN!</h1>
-    <p>Make sure you followed the <a href="" target="_blank"></a></p>
+    <p>
+      Make sure you followed the
+      <a
+        href="https://github.com/ErikoXDev/discord-bot-cdn#installation"
+        target="_blank"
+        >Installation instructions!</a
+      >
+    </p>
     <form action="/upload" method="post" enctype="multipart/form-data">
       <input type="file" name="file" id="file" />
       <input type="text" name="password" placeholder="password" id="password" />
